<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.i21mscz23</groupId>
    <artifactId>xmaodou-security</artifactId>
    <packaging>pom</packaging>
    <version>1.0.7-RELEASE</version>
    <url>https://github.com/i21mscz23/xmaodou-security</url>
    <description>security</description>
    <name>security</name>
    <modules>
        <module>xmaodou-jwt</module>
        <module>xmaodou-social</module>
        <module>xmaodou-server</module>
    </modules>

    <properties>
        <revision>1.0.7-RELEASE</revision>

        <i21mscz23.support-tools.version>1.0.8-RELEASE</i21mscz23.support-tools.version>
        <i21mscz23.security-social.version>1.0.5-RELEASE</i21mscz23.security-social.version>
        <i21mscz23.security-jwt.version>1.0.7-RELEASE</i21mscz23.security-jwt.version>

        <java-jwt.version>3.19.2</java-jwt.version>
        <json-path.version>2.6.0</json-path.version>

        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <encoding>UTF-8</encoding>
        <java.version>1.8</java.version>
        <javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
    </properties>

    <scm>
        <connection>scm:https://github.com/i21mscz23/xmaodou-security</connection>
        <developerConnection>scm:https://github.com/i21mscz23/xmaodou-security</developerConnection>
        <url>https://github.com/i21mscz23/xmaodou-security</url>
        <tag>1.0.7-RELEASE</tag>
    </scm>



    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>2.4.10</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>2020.0.1</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.auth0</groupId>
                <artifactId>java-jwt</artifactId>
                <version>${java-jwt.version}</version>
            </dependency>

            <dependency>
                <groupId>com.jayway.jsonpath</groupId>
                <artifactId>json-path</artifactId>
                <version>${json-path.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.i21mscz23</groupId>
                <artifactId>support-tools</artifactId>
                <version>${i21mscz23.support-tools.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.i21mscz23</groupId>
                <artifactId>xmaodou-social</artifactId>
                <version>${i21mscz23.security-social.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.i21mscz23</groupId>
                <artifactId>xmaodou-jwt</artifactId>
                <version>${i21mscz23.security-jwt.version}</version>
            </dependency>



        </dependencies>
    </dependencyManagement>


    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.9.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <additionalparam>-Xdoclint:none</additionalparam>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>1.5</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                </configuration>
            </plugin>
        </plugins>
    </build>




    <developers>
        <developer>
            <name>xmd</name>
            <email>i21mscz23@gmail.com</email>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <distributionManagement>
        <snapshotRepository>
            <id>xmaodou-snapshot</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>xmaodou-release</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
        </repository>
    </distributionManagement>


</project>